# ipc

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  INSTALL.md  README.md  conanfile.py  msan_ignore_list_clang.cfg  tsan_suppressions.cfg  tsan_suppressions_clang_13.cfg  tsan_suppressions_clang_15.cfg  tsan_suppressions_clang_16.cfg  tsan_suppressions_clang_17.cfg  ubsan_suppressions_clang.cfg  ubsan_suppressions_clang_13.cfg  ubsan_suppressions_clang_15.cfg  ubsan_suppressions_clang_16.cfg  ubsan_suppressions_clang_17.cfg  workflow_check.py
.github/workflows/: main.yml  requirements.in
doc/: .gitignore
doc/ipc_doc/: .gitignore  index.html
src/doc/manual/: a-about.dox.txt  b-api_overview.dox.txt  c-setup.dox.txt  d-async_loop.dox.txt  e-session_setup.dox.txt  f-chan_open.dox.txt  g-session_app_org.dox.txt  h-safety_perms.dox.txt  i-universes.dox.txt  j-chan_struct.dox.txt  k-chan_struct_advanced.dox.txt  l-transport_shm.dox.txt
src/ipc/transport/: snap_shm_transport.hpp
src/ipc/transport/snap/: CMakeLists.txt  LICENSE  README.md  snap.hpp
src/ipc/transport/snap/docs/: API_REFERENCE.md  BENCHMARKS.md  SNAP.md  SNAP_SSL.md  TUNING.md  WEBSOCKET.md
src/ipc/transport/snap/examples/: 01_inproc.cpp  02_shm.cpp  03_udp.cpp  04_tcp.cpp  05_pubsub.cpp  06_pipeline.cpp  07_multicast.cpp  08_pool.cpp  09_batch.cpp  10_http_server.cpp  11_https_server.cpp  12_ws_chat_server.cpp  main.cpp
src/ipc/transport/snap/includes/: dispatch.hpp  http_link.hpp  http_server.hpp  ipc_link.hpp  memory_pool.hpp  mpmc_queue.hpp  multicast_link.hpp  pipeline.hpp  ring_buffer.hpp  shm_link.hpp  ssl_link.hpp  tcp_link.hpp  udp_link.hpp  utils.hpp  ws_link.hpp  ws_server.hpp
src/ipc/transport/snap/test/: bench.cpp  dispatch_test.cpp  mpmc_test.cpp  pool_test.cpp  spsc_test.cpp
test/suite/: CMakeLists.txt
test/suite/perf_demo/: CMakeLists.txt  common.cpp  common.hpp  main_cli.cpp  main_srv.cpp  schema.capnp
test/suite/rpc_demo/: CMakeLists.txt  common.cpp  common.hpp  main_cli.cpp  main_srv.cpp  schema.capnp
test/suite/transport_test/: CMakeLists.txt  README.txt  cli-script.txt  ex.capnp  ex_cli.hpp  ex_guy.cpp  ex_guy.hpp  ex_srv.hpp  script_interpreter.cpp  script_interpreter.hpp  srv-script.txt  transport_test.cpp
test/suite/transport_test/heap/sanitize/tsan/: suppressions_clang.cfg
test/suite/transport_test/shm-c/sanitize/tsan/: suppressions_clang.cfg
test/suite/transport_test/shm-c/srv/sanitize/tsan/: suppressions_clang.cfg
test/suite/transport_test/shm-j/sanitize/tsan/: suppressions_clang.cfg
test/suite/unit_test/: CMakeLists.txt  test_borrower_main.cpp  test_jemalloc_shm_session_server_main.cpp  test_main.cpp
test/suite/unit_test/sanitize/tsan/: suppressions_clang.cfg  suppressions_clang_13.cfg  suppressions_clang_15.cfg  suppressions_clang_16.cfg  suppressions_clang_17.cfg
tools/doc/: stage_generated_docs.sh
